// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: A/B Test View Mode should render cancelled status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Edit and Rerun Test",
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": "Cancel Test",
        "visible": false,
      },
      Object {
        "content": "Override Default Template",
        "visible": false,
      },
      Object {
        "content": "delete content",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
</Page>
`;

exports[`Page: A/B Test View Mode should render completed status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Edit and Rerun Test",
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": "Cancel Test",
        "visible": false,
      },
      Object {
        "content": "Override Default Template",
        "visible": false,
      },
      Object {
        "content": "delete content",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
</Page>
`;

exports[`Page: A/B Test View Mode should render running status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={null}
  secondaryActions={
    Array [
      Object {
        "content": "Cancel Test",
        "visible": true,
      },
      Object {
        "content": "Override Default Template",
        "visible": false,
      },
      Object {
        "content": "delete content",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": "1",
          }
        }
      />
    </Left>
    <Right />
  </Section>
</Page>
`;
